...
          ),
        ),
        Positioned(
          right: 24,
          bottom: 4,
          child: Semantics(
            identifier: 'medicine_pause_switch',
            child: Switch(
              value: medicine.pausedDateTime == null,
              onChanged: (value) async {
                analytics.logEvent(name: 'medicines_pause_switch_changed');
                try {
                  await ref.read(medicineSetPausedProvider).call(
...
